--- a/helm/kdl-server/Chart.yaml
+++ b/helm/kdl-server/Chart.yaml
@@ -10,5 +10,5 @@ dependencies:
     version: "3.2.0"
     repository: "https://charts.min.io/"
   - name: enterprise-gateway
-    version: "2.5.0"
-    repository: "https://charts.spot.io"
+    version: "2.6.0"
+    repository: "https://konstellation-io.github.io/enterprise_gateway/"
