--- a/charts/kdl-server/.helmignore
+++ b/charts/kdl-server/.helmignore
@@ -1,7 +1,10 @@
 # Patterns to ignore when building packages.
 # This supports shell glob matching, relative path matching, and
 # negation (prefixed with !). Only one pattern per line.
+
+# MACOSX
 .DS_Store
+
 # Common VCS dirs
 .git/
 .gitignore
@@ -10,14 +13,23 @@
 .hg/
 .hgignore
 .svn/
+
 # Common backup files
 *.swp
 *.bak
 *.tmp
 *.orig
 *~
+
 # Various IDEs
 .project
 .idea/
 *.tmproj
 .vscode/
+
+# kdl-server
+UPGRADE_GUIDE.md
+package.json
+README.md.gotmpl
+docs
+examples
