--- a/.github/workflows/github-auto-assign.yml
+++ b/.github/workflows/github-auto-assign.yml
@@ -17,5 +17,5 @@ jobs:
       - name: 'devops auto-assign'
         uses: kentaro-m/auto-assign-action@v2.0.0
         with:
-          repo-token: ${{ secrets.PAT_GITHUB }}
+          repo-token: ${{ secrets.PAT }}
           configuration-path: '.github/devops_auto_assign.yml'
