--- a/.github/workflows/github-auto-assign.yml
+++ b/.github/workflows/github-auto-assign.yml
@@ -1,10 +1,8 @@
 name: "[GitHub] Auto-assign"
 
 on:
-  pull_request:
-    types:
-      - opened
-      - ready_for_review
+  pull_request_target:
+    types: [opened, ready_for_review]
 
 jobs:
   run:
