--- a/charts/kdl-server/templates/app/secret.yaml
+++ b/charts/kdl-server/templates/app/secret.yaml
@@ -6,6 +6,5 @@ metadata:
     app:  kdl-server
 type: Opaque
 data:
-  MINIO_ACCESS_KEY: {{ .Values.minio.rootUser | b64enc }}
-  MINIO_SECRET_KEY: {{ .Values.minio.rootPassword | b64enc }}
-  DRONE_TOKEN: {{ .Values.drone.adminToken | b64enc }}
+  MINIO_ACCESS_KEY: {{ .Values.minio.auth.rootUser | b64enc }}
+  MINIO_SECRET_KEY: {{ .Values.minio.auth.rootPassword | b64enc }}
