--- a/charts/kdl-server/templates/backup/secret.yaml
+++ b/charts/kdl-server/templates/backup/secret.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.backup.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -9,3 +10,4 @@ data:
   BUCKET_NAME: {{ .Values.backup.s3.bucketName | b64enc }}
   DB_HOST: {{ "postgres:5432" | b64enc }}
   DB_USER: {{ "postgres" | b64enc }}
+{{- end }}
