--- a/charts/kdl-server/templates/drone-runner/secret.yaml
+++ b/charts/kdl-server/templates/drone-runner/secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.drone.enabled }}
 apiVersion: v1
 kind: Secret
 type: Opaque
@@ -8,3 +9,4 @@ metadata:
 data:
   DRONE_RPC_SECRET: {{ .Values.drone.rpcSecret | b64enc }}
   DRONE_SECRET_PLUGIN_TOKEN: {{ .Values.droneRunner.pluginSecret | b64enc }}
+{{- end }}
