--- a/charts/kdl-server/templates/gitea/secret.yaml
+++ b/charts/kdl-server/templates/gitea/secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.gitea.enabled }}
 apiVersion: v1
 kind: Secret
 type: Opaque
@@ -36,10 +37,10 @@ stringData:
 
     [database]
     DB_TYPE  = postgres
-    HOST     = postgres:5432
-    NAME     = {{ .Values.postgres.dbName }}
-    USER     = postgres
-    PASSWD   = {{ .Values.postgres.dbPassword }}
+    HOST     = postgresql:5432
+    NAME     = gitea
+    USER     = gitea
+    PASSWD   = gitea
     SSL_MODE = disable
     CHARSET  = utf8
 
@@ -137,3 +138,4 @@ stringData:
     done
     echo "Create admin for gitea failed!"
     exit 1
+{{- end }}
