--- a/charts/kdl-server/templates/knowledge-galaxy/serviceaccount.yaml
+++ b/charts/kdl-server/templates/knowledge-galaxy/serviceaccount.yaml
@@ -1,4 +1,4 @@
-{{ if and .Values.knowledgeGalaxy.enabled .Values.knowledgeGalaxy.serviceaccount.enabled }}
+{{ if and .Values.knowledgeGalaxy.enabled .Values.knowledgeGalaxy.serviceaccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
