--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -42,21 +42,20 @@ jobs:
             helm dependency list $dir 2> /dev/null | grep -v 'oci://' | tail +2 | head -n -1 | awk '{ print "helm repo add " $1 " " $3 }' | while read cmd; do $cmd; done
           done
 
+      # See https://github.com/helm/chart-releaser#config-file
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
-        with:
-          charts_dir: charts
-          config: .github/cr.yaml
         env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          CR_TOKEN: ${{ secrets.PAT }}
           CR_SKIP_EXISTING: true
+          CR_GENERATE_RELEASE_NOTES: true
 
       - name: Login in to the Container registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: "${{ secrets.GITHUB_TOKEN }}"
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install Cosign
         uses: sigstore/cosign-installer@v3
@@ -70,7 +69,7 @@ jobs:
           for chart in `find .cr-release-packages -name '*.tgz' -print`; do
             helm push ${chart} oci://ghcr.io/${GITHUB_REPOSITORY} |& tee helm-push-output.log
             file_name=${chart##*/}
-            chart_name=${file_name%-*}
+            chart_name=${file_name%-[0-9]*}
             digest=$(awk -F "[, ]+" '/Digest/{print $NF}' < helm-push-output.log)
             cosign sign -y "ghcr.io/${GITHUB_REPOSITORY}/${chart_name}@${digest}"
 
