--- a/charts/kdl-server/templates/drone-runner/deployment.yaml
+++ b/charts/kdl-server/templates/drone-runner/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.drone.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -63,3 +64,4 @@ spec:
         secret:
           secretName: {{ .Values.global.ingress.tls.caSecret.name }}
     {{- end }}
+{{- end }}
