--- a/charts/kdl-server/templates/drone-runner/job-serviceaccount.yaml
+++ b/charts/kdl-server/templates/drone-runner/job-serviceaccount.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.drone.enabled }}
 {{ if .Values.droneRunner.serviceAccountJob.create }}
 apiVersion: v1
 kind: ServiceAccount
@@ -8,3 +9,4 @@ metadata:
 {{ tpl (toYaml .Values.droneRunner.serviceAccountJob.annotations) . | indent 4 }}
 {{- end }}
 {{ end }}
+{{- end }}
