--- a/charts/kdl-server/templates/drone-runner/rbac.yaml
+++ b/charts/kdl-server/templates/drone-runner/rbac.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.drone.enabled }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -26,3 +27,4 @@ roleRef:
   kind: Role
   name: drone-runner
   apiGroup: ""
+{{- end }}
