--- a/charts/kdl-server/templates/drone/configmap.yaml
+++ b/charts/kdl-server/templates/drone/configmap.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.drone.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -13,3 +14,4 @@ data:
   DRONE_TLS_AUTOCERT: "false"
   DRONE_LOGS_DEBUG: "true"
   DRONE_DATABASE_DRIVER: postgres
+{{- end }}
