--- a/charts/kdl-server/templates/drone/ingress.yaml
+++ b/charts/kdl-server/templates/drone/ingress.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.drone.enabled }}
 {{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1
 {{- else if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
@@ -42,3 +43,4 @@ spec:
             serviceName: drone
             servicePort: http
             {{- end }}
+{{- end }}
