--- a/charts/kdl-server/templates/drone/secret.yaml
+++ b/charts/kdl-server/templates/drone/secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.drone.enabled }}
 apiVersion: v1
 kind: Secret
 type: Opaque
@@ -9,3 +10,4 @@ data:
   DRONE_RPC_SECRET: {{ .Values.drone.rpcSecret | b64enc }}
   DRONE_DATABASE_DATASOURCE: {{ printf "postgres://postgres:%s@postgres:5432/drone?sslmode=disable" .Values.postgres.dbPassword | b64enc }}
   DRONE_USER_CREATE: {{ printf "username:%s,admin:true,token:%s" .Values.gitea.admin.username .Values.drone.adminToken | b64enc }}
+{{- end }}
