--- a/charts/kdl-server/templates/drone/service.yaml
+++ b/charts/kdl-server/templates/drone/service.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.drone.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -13,3 +14,4 @@ spec:
       protocol: TCP
   selector:
     app: drone
+{{- end }}
