--- a/charts/kdl-server/templates/gitea/ingress.yaml
+++ b/charts/kdl-server/templates/gitea/ingress.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.gitea.enabled }}
 {{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1
 {{- else if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
@@ -40,3 +41,4 @@ spec:
               serviceName: gitea
               servicePort: http
               {{- end }}
+{{- end }}
