--- a/charts/kdl-server/templates/gitea/service.yaml
+++ b/charts/kdl-server/templates/gitea/service.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.gitea.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -17,3 +18,4 @@ spec:
       protocol: TCP
   selector:
     app: gitea
+{{- end }}
