--- a/charts/kdl-server/templates/gitea/statefulset.yaml
+++ b/charts/kdl-server/templates/gitea/statefulset.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.gitea.enabled }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -86,3 +87,4 @@ spec:
         resources:
           requests:
             storage:  {{ .Values.gitea.storage.size }}
+{{- end }}
