fix: keep legacy templates

--- a/charts/kdl-server/templates/gitea/secret.yaml
+++ b/charts/kdl-server/templates/gitea/secret.yaml
@@ -37,7 +37,7 @@ stringData:
 
     [database]
     DB_TYPE  = postgres
-    HOST     = postgresql:5432
+    HOST     = postgres:5432
     NAME     = gitea
     USER     = gitea
     PASSWD   = gitea
