--- a/charts/kdl-server/Chart.yaml
+++ b/charts/kdl-server/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 type: application
 name: kdl-server
 description: A Helm chart to deploy KDL server
-version: 6.0.3-rc.1
+version: 6.0.3-rc.2
 appVersion: 1.38.0
 sources:
   - https://github.com/konstellation-io/kdl-server
@@ -18,6 +18,9 @@ keywords:
   - kubernetes
   - machine learning
 dependencies:
+  # - name: minio
+  #   version: "3.2.0"
+  #   repository: "https://charts.min.io/"
   - name: minio
     version: 14.8.1
     repository: oci://registry-1.docker.io/bitnamicharts
