--- a/charts/kdl-server/templates/gitea/statefulset.yaml
+++ b/charts/kdl-server/templates/gitea/statefulset.yaml
@@ -22,9 +22,11 @@ spec:
         - name: gitea
           image: {{ .Values.gitea.image.repository }}:{{ .Values.gitea.image.tag }}
           imagePullPolicy: {{ .Values.gitea.image.pullPolicy }}
-          envFrom:
-            - secretRef:
-                name: postgres
+          env:
+          - name: POSTGRES_DB
+            value: {{ .Values.postgres.dbName | quote }}
+          - name: POSTGRES_PASSWORD
+            value: {{ .Values.postgres.dbPassword | quote }}
           lifecycle:
             postStart:
               exec:
