--- a/charts/kdl-server/templates/app/configmap.yaml
+++ b/charts/kdl-server/templates/app/configmap.yaml
@@ -31,7 +31,11 @@ data:
   DRONE_INTERNAL_URL: "http://drone"
   DRONE_URL: "{{ printf "%s://drone.%s" (include "http.protocol" . ) .Values.global.domain }}"
   KNOWLEDGE_GALAXY_URL: "{{ include "http.protocol" . }}://kdlapp.{{ .Values.global.domain }}/kg/projects/PROJECT_ID/"
+  {{- if .Values.minio.fullnameOverride }}
+  MINIO_ENDPOINT: "{{ .Values.minio.fullnameOverride }}:9000"
+  {{ else }}
   MINIO_ENDPOINT: "{{ .Release.Name }}-minio:9000"
+  {{- end }}
   PROJECT_FILEBROWSER_URL: "{{ include "http.protocol" . }}://kdlapp.{{ .Values.global.domain }}/filebrowser/PROJECT_ID/"
   PROJECT_MLFLOW_URL: "{{ include "http.protocol" . }}://kdlapp.{{ .Values.global.domain }}/mlflow/PROJECT_ID/"
   USER_TOOLS_VSCODE_URL: "{{ include "http.protocol" . }}://USERNAME-code.{{ .Values.global.domain }}/?folder=/home/coder/repos/REPO_FOLDER"
