--- a/charts/kdl-server/values.yaml
+++ b/charts/kdl-server/values.yaml
@@ -77,14 +77,15 @@ backup:
     # -- The S3 bucket that will store all backups
     bucketName: s3-bucket-name
 
-  # -- Resource requests and limits for backup container. Ref: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
-  resources:
-    requests:
-      cpu: "100m"
-      memory: "100Mi"
-    limits:
-      cpu: "100m"
-      memory: "256Mi"
+  # -- Resources limits and requested
+  # </br> Ref: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
+  resources: {}
+    # limits:
+    #   cpu: 100m
+    #   memory: 128Mi
+    # requests:
+    #   cpu: 100m
+    #   memory: 128Mi
 
   # -- Extra volume mounts for backup pods
   extraVolumeMounts: []
@@ -118,131 +119,6 @@ cleaner:
     tag: 0.16.0
     # The pull policy for the image
     pullPolicy: IfNotPresent
-
-# -- Drone deployment
-# (DEPRECATION) Remove in future versions
-drone:
-  # -- Whether to enable Drone
-  enabled: true
-
-  image:
-    # The repository of the image
-    repository: drone/drone
-    # The image tag
-    tag: 1.10.1
-    # The pull policy for the image
-    pullPolicy: IfNotPresent
-  storage:
-    # -- Storage size
-    size: 10Gi
-    # -- The Storage ClassName
-    storageClassName: standard
-  # -- Drone RPC secret for allowing Drone runners to authentiticate the RPC connection to the server
-  rpcSecret: runner-shared-secret
-  # -- Drone Server admin token
-  adminToken: 7GSipOV0wJZQioZNBxaw3AotHV1tA4K4
-  # -- The max number of concurrent jobs that a Drone runner can run
-  runnerCapacity: 5
-  ingress:
-    # -- The ingress class name
-    className: "nginx"
-    tls:
-      # -- The TLS secret name that will be used. It takes precedence over `.Values.global.ingress.tls.secretName`.
-      secretName: null
-    # -- Ingress annotations
-    annotations:
-      ## This Chart has been developed using Nginx Ingress Controller by default.
-      ## Using the following default annotations ensures its correct operation.
-      ## Ref: https://kubernetes.github.io/ingress-nginx/
-      ##
-      nginx.ingress.kubernetes.io/proxy-body-size: 100m
-      nginx.ingress.kubernetes.io/configuration-snippet: |
-        more_set_headers "Content-Security-Policy: frame-ancestors 'self' *";
-      ## In case of additional security to be required set the previous annotation as follows
-      ##
-      # nginx.ingress.kubernetes.io/configuration-snippet: |
-      #   more_set_headers "Content-Security-Policy: frame-ancestors 'self' https://kdlapp.kdl.local";
-
-      ## If additional annotations are needed to configure it, provide an additional
-      ## file ensuring they are appended to the default ones.
-      ##
-      ## Example:
-      ##
-      # nginx.ingress.kubernetes.io/proxy-body-size: 100m
-      # nginx.ingress.kubernetes.io/configuration-snippet: |
-      #   more_set_headers "Content-Security-Policy: frame-ancestors 'self' https://kdlapp.kdl.local";
-      # cert-manager.io/issuer: your-issuer
-
-  # -- Node labels for pod assignment
-  # </br> Ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#nodeselector
-  nodeSelector: {}
-
-  # -- Tolerations for pod assignment
-  # </br> Ref: https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration/
-  tolerations: []
-
-  # -- Affinity for pod assignment
-  # </br> Ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#affinity-and-anti-affinity
-  affinity: {}
-
-# -- Drone Authorizer deployment
-# (DEPRECATION) Remove in future versions
-droneAuthorizer:
-  image:
-    # The repository of the image
-    repository: konstellation/kdl-drone-authorizer
-    # The image tag
-    tag: 0.16.0
-    # The pull policy for the image
-    pullPolicy: IfNotPresent
-
-# -- Drone Runner deployment
-# (DEPRECATION) Remove in future versions
-droneRunner:
-  image:
-    # The repository of the image
-    repository: drone/drone-runner-kube
-    # The image tag
-    tag: 1.0.0-beta.6
-    # The pull policy for the image
-    pullPolicy: IfNotPresent
-
-  # -- Sets DRONE_DEBUG environment variable
-  debug: "true"
-  # -- Sets DRONE_TRACE environment variable
-  trace: "true"
-
-  # -- Provides the secret token used to authenticate http requests to the Kubernetes Secrets Extension endpoint
-  pluginSecret: "my-secret"
-
-  # -- Configures the DRONE_RUNNER_ENVIRON environment variable. Ref: https://docs.drone.io/runner/kubernetes/configuration/reference/drone-runner-environ/
-  droneRunnerEnviron: ""
-  # droneRunnerEnviron: "GIT_SSL_NO_VERIFY:true"
-
-  ## Service Account to use to run in drone jobs (If you want to use IRSA or Workload Identity)
-  ##
-  serviceAccountJob:
-    # -- Whether to enable the service account for Drone job pods
-    enabled: false
-    # -- If `.Values.droneRunner.serviceAccountJob.enabled` is set to `true`, creates the service account
-    create: false
-    # -- The name of the Drone job service account
-    name: drone-runner-job
-    # -- If `.Values.droneRunner.serviceAccountJob.create` is set to `true`, sets annotations to the service account
-    annotations: {}
-    #  eks.amazonaws.com/role-arn: "arn:aws:iam::1234567890:role/myrole"
-
-  # -- Node labels for pod assignment
-  # </br> Ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#nodeselector
-  nodeSelector: {}
-
-  # -- Tolerations for pod assignment
-  # </br> Ref: https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration/
-  tolerations: []
-
-  # -- Affinity for pod assignment
-  # </br> Ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#affinity-and-anti-affinity
-  affinity: {}
 
 # -- Gitea deployment
 # (DEPRECATION) Remove in future versions
@@ -411,17 +287,227 @@ knowledgeGalaxy:
 
   # -- Enable creation of ServiceAccount
   # </br> Ref: https://kubernetes.io/docs/concepts/security/service-accounts/
-  serviceaccount:
+  serviceAccount:
     # Specifies whether a service account should be created
     create: true
+    # Automatically mount a ServiceAccount's API credentials?
+    automount: true
     # Annotations to add to the service account
     annotations: {}
     # The name of the service account to use
     # If not set and create is true, a name is generated using the fullname template
     name: ""
-    # -- Reference to one or more secrets to be used when pulling images. Ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
-    imagePullSecrets: []
-    # - name: regcred
+
+  # -- Enable or disable test connection
+  testConnection:
+    # Specifies whether a test connection should be created
+    enabled: false
+    # The repository of the image
+    repository: busybox
+    # Overrides the image tag whose default is the chart appVersion
+    tag: ""
+
+  # -- Environment variables to configure application
+  # ref: https://github.com/konstellation-io/knowledge-galaxy?tab=readme-ov-file#environment-variables
+  env: {}
+    # DESCRIPTION_MIN_WORDS: 50
+    # HOST: "0.0.0.0"
+    # LOG_LEVEL: "INFO"
+    # N_HITS: 1000
+    # SERVER_MONGODB_URI: mongodb://mongodb:27017
+    # SERVER_PORT: 8080
+    # STANDALONE_MODE: "false"
+    # WORKERS: "1"
+
+  # -- Variables from secrets
+  envFromSecrets: {}
+    # MY_VARIABLE:
+    #  name: <name-secret>
+    #  key: secret_key
+
+  # -- Variables from configMap
+  envFromConfigMap: {}
+    # MY_VARIABLE:
+    #  name: <name-configmap>
+    #  key: key
+
+  # -- Configure additional containers
+  # </br> Ref: https://kubernetes.io/docs/concepts/workloads/pods/init-containers/
+  initContainers: []
+    # - name: my-container
+    #   image: busybox
+    #   command: ['sh', '-c', 'echo "Hello, World!"']
+
+  # -- Configure args
+  # </br> Ref: https://kubernetes.io/docs/tasks/inject-data-application/define-command-argument-container/
+  args: []
+    # - -c
+    # - echo "Hello, World!"
+
+  # -- Configure command
+  # </br> Ref: https://kubernetes.io/docs/tasks/inject-data-application/define-command-argument-container/
+  command: []
+    # - echo
+    # - "Hello, World!"
+
+  # -- Kubernetes service to expose Pod
+  # </br> Ref: https://kubernetes.io/docs/concepts/services-networking/service/
+  service:
+    # -- Kubernetes Service type. Allowed values: NodePort, LoadBalancer or ClusterIP
+    type: ClusterIP
+    # -- Kubernetes Service port
+    port: 80
+    # -- Kubernetes Service health check path
+    # healthPath: ""
+    # -- NodePort port (only when type is NodePort)
+    # nodePort: 32000
+    # -- Pod expose port
+    targetPort: 8080
+    # -- Pod extra ports
+    # extraPorts:
+    # - name: metrics
+    #   port: 9080
+    #   targetPort: 9080
+
+  # -- Configure lifecycle hooks
+  # </br> Ref: https://kubernetes.io/docs/concepts/containers/container-lifecycle-hooks/
+  # </br> Ref: https://learnk8s.io/graceful-shutdown
+  lifecycle: {}
+    # preStop:
+    #   exec:
+    #     command: ["sh", "-c", "sleep 10"]
+
+  # -- Configure Pod termination grace period
+  # </br> Ref: https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#pod-termination
+  terminationGracePeriodSeconds: 30
+
+  # -- Configure liveness checker
+  # </br> Ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/#define-startup-probes
+  livenessProbe:
+    enabled: false
+    failureThreshold: 3
+    initialDelaySeconds: 180
+    periodSeconds: 10
+    successThreshold: 1
+    timeoutSeconds: 5
+
+  # -- Custom livenessProbe
+  livenessProbeCustom: {}
+    # httpGet:
+    #   path: /dashboard
+    #   port: 4000
+    # failureThreshold: 3
+    # initialDelaySeconds: 200
+    # periodSeconds: 30
+    # successThreshold: 1
+    # timeoutSeconds: 5
+
+  # -- Configure readinessProbe checker
+  # </br> Ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/#define-startup-probes
+  readinessProbe:
+    enabled: false
+    failureThreshold: 3
+    initialDelaySeconds: 10
+    periodSeconds: 10
+    successThreshold: 1
+    timeoutSeconds: 1
+
+  # -- Custom readinessProbe
+  readinessProbeCustom: {}
+    # httpGet:
+    #   path: /dashboard
+    #   port: 4000
+    # failureThreshold: 3
+    # initialDelaySeconds: 200
+    # periodSeconds: 30
+    # successThreshold: 1
+    # timeoutSeconds: 5
+
+  # -- Configure startupProbe checker
+  # </br> Ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/#define-startup-probes
+  startupProbe:
+    enabled: false
+    failureThreshold: 30
+    initialDelaySeconds: 180
+    periodSeconds: 10
+    successThreshold: 1
+    timeoutSeconds: 5
+
+  # -- Custom startupProbe
+  startupProbeCustom: {}
+    # httpGet:
+    #   path: /dashboard
+    #   port: 4000
+    # failureThreshold: 3
+    # initialDelaySeconds: 200
+    # periodSeconds: 30
+    # successThreshold: 1
+    # timeoutSeconds: 5
+
+  # -- Configure annotations on Pods
+  podAnnotations: {}
+
+  # -- Configure labels on Pods
+  podLabels: {}
+
+  # -- Defines privilege and access control settings for a Pod
+  # </br> Ref: https://kubernetes.io/docs/concepts/security/pod-security-standards/
+  # </br> Ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/
+  podSecurityContext: {}
+    # fsGroup: 2000
+
+  # -- Defines privilege and access control settings for a Container
+  # </br> Ref: https://kubernetes.io/docs/concepts/security/pod-security-standards/
+  # </br> Ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/
+  securityContext: {}
+    # capabilities:
+    #   drop:
+    #   - ALL
+    # readOnlyRootFilesystem: true
+    # runAsNonRoot: true
+    # runAsUser: 1000
+
+  # -- Resources limits and requested
+  # </br> Ref: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
+  resources: {}
+    # limits:
+    #   cpu: 100m
+    #   memory: 128Mi
+    # requests:
+    #   cpu: 100m
+    #   memory: 128Mi
+
+  # -- Pod Disruption Budget
+  # </br> Ref: https://kubernetes.io/docs/reference/kubernetes-api/policy-resources/pod-disruption-budget-v1/
+  podDisruptionBudget:
+    enabled: false
+    maxUnavailable: 1
+    minAvailable:
+
+  # -- Autoscaling with CPU or memory utilization percentage
+  # </br> Ref: https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/
+  autoscaling:
+    enabled: false
+    minReplicas: 1
+    maxReplicas: 100
+    targetCPUUtilizationPercentage: 80
+    # targetMemoryUtilizationPercentage: 80
+
+  # -- Additional volumes on the output Deployment definition
+  # </br> Ref: https://kubernetes.io/docs/concepts/storage/volumes/
+  # </br> Ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-pod-configmap/
+  # </br> Ref: https://kubernetes.io/docs/tasks/inject-data-application/distribute-credentials-secure/#create-a-pod-that-has-access-to-the-secret-data-through-a-volume
+  volumes: []
+  # - name: foo
+  #   secret:
+  #     secretName: mysecret
+  #     optional: false
+
+  # -- Additional volumeMounts on the output Deployment definition
+  volumeMounts: []
+  # - name: foo
+  #   mountPath: "/etc/foo"
+  #   readOnly: true
 
   # -- Node labels for pod assignment
   # </br> Ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#nodeselector
@@ -435,6 +521,13 @@ knowledgeGalaxy:
   # </br> Ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#affinity-and-anti-affinity
   affinity: {}
 
+  # -- Control how Pods are spread across your cluster
+  # </br> Ref: https://kubernetes.io/docs/concepts/scheduling-eviction/topology-spread-constraints/#example-multiple-topologyspreadconstraints
+  topologySpreadConstraints: []
+  # - maxSkew: 1
+  #   topologyKey: zone
+  #   whenUnsatisfiable: DoNotSchedule
+
 # -- KDL Server deployment
 kdlServer:
   # -- Image registry
@@ -446,6 +539,19 @@ kdlServer:
     pullPolicy: IfNotPresent
     # The image tag
     tag: 1.38.0
+
+  # -- Enable creation of ServiceAccount
+  # </br> Ref: https://kubernetes.io/docs/concepts/security/service-accounts/
+  serviceAccount:
+    # Specifies whether a service account should be created
+    create: true
+    # Automatically mount a ServiceAccount's API credentials?
+    automount: true
+    # Annotations to add to the service account
+    annotations: {}
+    # The name of the service account to use
+    # If not set and create is true, a name is generated using the fullname template
+    name: ""
 
   # -- Ingress configuration to expose app
   # </br> Ref: https://kubernetes.io/docs/concepts/services-networking/ingress/
@@ -481,6 +587,32 @@ kdlServer:
       # nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
       # nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
       # nginx.ingress.kubernetes.io/proxy-body-size: "1000000m"
+
+  # -- Resources limits and requested
+  # </br> Ref: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
+  resources: {}
+    # limits:
+    #   cpu: 100m
+    #   memory: 128Mi
+    # requests:
+    #   cpu: 100m
+    #   memory: 128Mi
+
+  # -- Pod Disruption Budget
+  # </br> Ref: https://kubernetes.io/docs/reference/kubernetes-api/policy-resources/pod-disruption-budget-v1/
+  podDisruptionBudget:
+    enabled: false
+    maxUnavailable: 1
+    minAvailable:
+
+  # -- Autoscaling with CPU or memory utilization percentage
+  # </br> Ref: https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/
+  autoscaling:
+    enabled: false
+    minReplicas: 1
+    maxReplicas: 100
+    targetCPUUtilizationPercentage: 80
+    # targetMemoryUtilizationPercentage: 80
 
   # -- Node labels for pod assignment
   # </br> Ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#nodeselector
@@ -797,14 +929,57 @@ projectOperator:
     # </br> Ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#affinity-and-anti-affinity
     affinity: {}
 
-# -- Mount volume to share data between components
+# -- Persistent Volume configuration
+# Mount volume to share data between components
+# </br> Ref: https://kubernetes.io/docs/concepts/storage/persistent-volumes/
 sharedVolume:
-  # -- The name of the shared volume
-  name: received-data
-  # -- Storage class to use for persistence
-  storageClassName: ""
-  # -- The storage size for the persistent volume claim
+  # -- Enable or disable persistence
+  enabled: false
+
+  # -- Name of the shared volume
+  # name: received-data
+
+  # -- Persistent Volume access modes
+  # Must match those of existing PV or dynamic provisioner
+  # </br> Ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
+  accessModes:
+    - ReadWriteMany
+
+  # -- Persistent Volume annotations
+  annotations: {}
+
+  # -- Persistent Volume labels
+  labels: {}
+
+  # -- Persistent Volume size
   size: 10Gi
+
+  # -- Persistent Volume Storage Class
+  # If defined, storageClassName: <storageClass>
+  # If set to "-", storageClassName: "", which disables dynamic provisioning
+  # If undefined (the default) or set to null, no storageClassName spec is
+  #   set, choosing the default provisioner.  (gp2 on AWS, standard on
+  #   GKE, AWS & OpenStack)
+  storageClass: ""
+
+  # -- Persistent Volume Binding Mode
+  # If defined, volumeBindingMode: <volumeBindingMode>
+  # If undefined (the default) or set to null, no volumeBindingMode spec is
+  # set, choosing the default mode.
+  volumeBindingMode: ""
+
+  # -- Persistent Volume Claim Selector
+  # Useful if Persistent Volumes have been provisioned in advance
+  # </br> Ref: https://kubernetes.io/docs/concepts/storage/persistent-volumes/#selector
+  selector: {}
+    # matchLabels:
+    #   release: "stable"
+    # matchExpressions:
+    #   - { key: environment, operator: In, values: [ dev ] }
+
+  # -- Persistent Volume Name
+  # Useful if Persistent Volumes have been provisioned in advance and you want to use a specific one
+  volumeName: ""
 
 # -- User Tools Operator deployment
 userToolsOperator:
