chore(kdl-server): complete refactor
* split files
* improve templates
* parametrize all values

--- a/charts/kdl-server/Chart.yaml
+++ b/charts/kdl-server/Chart.yaml
@@ -10,6 +10,10 @@ home: https://www.konstellation.io
 maintainers:
   - name: ialejandro
     email: ivan.alejandro@intelygenz.com
+  - name: alpiquero
+    email: angelluis.piquero@intelygenz.com
+  - name: danielchg
+    email: daniel.chavero@intelygenz.com
 keywords:
   - ia
   - kdl
