--- a/charts/kdl-server/templates/app/oauth2-secret.yaml
+++ b/charts/kdl-server/templates/app/oauth2-secret.yaml
@@ -1,3 +1,5 @@
+# TODO: legacy backward compatibility
+{{- if not .Values.oauth2proxy.enabled -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -7,3 +9,4 @@ data:
   DEPLOYMENT_SECRET_NAME: {{ print "kdl-server-oauth2-credentials" | b64enc }}
   GITEA_REDIRECT_URIS: {{ printf "%s://kdlapp.%s/oauth2/callback"  ( include "http.protocol" . ) .Values.global.domain | b64enc }}
   GITEA_APPLICATION_NAME: {{ print "kdl-server" | b64enc }}
+{{- end }}
