--- a/charts/kdl-server/templates/knowledge-galaxy/secret.yaml
+++ b/charts/kdl-server/templates/knowledge-galaxy/secret.yaml
@@ -1,15 +1,15 @@
-{{- range .Values.secrets }}
+{{- range .Values.knowledgeGalaxy.secrets }}
 ---
 apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-  name: {{ include "kdl-server.fullname" $ }}-{{ .name }}
+  name: {{ include "konstellation-base.fullname" $ }}-{{ .name }}
   annotations:
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "0"
   labels:
-    {{- include "kdl-server.kdlServerLabels" $ | nindent 4 }}
+    {{- include "kdl-server.knowledgeGalaxyLabels" $ | nindent 4 }}
 data:
   {{- range $key, $value := .data }}
   {{- if regexMatch "\n" $value }}
