--- a/charts/kdl-server/templates/knowledge-galaxy/serviceaccount.yaml
+++ b/charts/kdl-server/templates/knowledge-galaxy/serviceaccount.yaml
@@ -1,16 +1,13 @@
-{{ if and .Values.knowledgeGalaxy.enabled .Values.knowledgeGalaxy.serviceaccount.create }}
+{{ if and .Values.knowledgeGalaxy.enabled .Values.knowledgeGalaxy.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "knowledgeGalaxy.serviceAccountName" . }}
+  name: {{ include "kdl-server.knowledgeGalaxyServiceAccountName" . }}
   labels:
-    app: knowledge-galaxy
-  {{- with .Values.knowledgeGalaxy.serviceaccount.annotations }}
+    {{- include "kdl-server.knowledgeGalaxyLabels" . | nindent 4 }}
+  {{- with .Values.knowledgeGalaxy.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-{{- with .Values.knowledgeGalaxy.serviceaccount.imagePullSecrets }}
-imagePullSecrets:
-  {{- toYaml . | nindent 2 }}
-{{- end }}
+automountServiceAccountToken: {{ .Values.knowledgeGalaxy.serviceAccount.automount | default "false" }}
 {{- end }}
