--- a/charts/kdl-server/templates/app/configmap.yaml
+++ b/charts/kdl-server/templates/app/configmap.yaml
@@ -1,9 +1,12 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: kdl-server
+  name: {{ include "kdl-server.fullname" . }}
+  annotations:
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-weight": "0"
   labels:
-    app: kdl-server
+    {{- include "kdl-server.kdlServerLabels" . | nindent 4 }}
 data:
   ##
   # KDL APP configuration
@@ -28,9 +31,6 @@ data:
 
   ##
   # KDL URL Setup
-  DRONE_INTERNAL_URL: "http://drone"
-  DRONE_URL: "{{ printf "%s://drone.%s" (include "http.protocol" . ) .Values.global.domain }}"
-  KNOWLEDGE_GALAXY_URL: "{{ include "http.protocol" . }}://kdlapp.{{ .Values.global.domain }}/kg/projects/PROJECT_ID/"
   {{- if .Values.minio.fullnameOverride }}
   MINIO_ENDPOINT: "{{ .Values.minio.fullnameOverride }}:9000"
   {{ else }}
@@ -56,6 +56,7 @@ data:
 
   ##
   # Knowledge Galaxy
+  KNOWLEDGE_GALAXY_URL: "{{ include "http.protocol" . }}://kdlapp.{{ .Values.global.domain }}/kg/projects/PROJECT_ID/"
   KNOWLEDGE_GALAXY_ENABLED: "{{ .Values.knowledgeGalaxy.enabled }}"
 
   ##
@@ -133,5 +134,5 @@ data:
 
   ##
   # Labels
-  LABELS_COMMON_APP_RELEASE: {{ .Values.kdlServer.image.tag }}
+  LABELS_COMMON_APP_RELEASE: {{ .Values.image.tag }}
   LABELS_COMMON_CHART_RELEASE: {{ .Chart.Version }}
