--- a/charts/kdl-server/templates/app/deployment.yaml
+++ b/charts/kdl-server/templates/app/deployment.yaml
@@ -1,24 +1,35 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kdl-server
+  name: {{ include "kdl-server.fullname" . }}
+  labels:
+    {{- include "kdl-server.kdlServerLabels" . | nindent 4 }}
 spec:
+  {{- if not .Values.autoscaling.enabled }}
+  replicas: {{ .Values.replicaCount }}
+  {{- end }}
   selector:
     matchLabels:
-      app: kdl-server
+      {{- include "kdl-server.selectorKdlServerLabels" . | nindent 6 }}
   template:
     metadata:
-      labels:
-        app: kdl-server
       annotations:
         checksum/kdl-config: {{ include (print $.Template.BasePath "/app/configmap.yaml") . | sha256sum }}
         checksum/kdl-secret: {{ include (print $.Template.BasePath "/app/secret.yaml") . | sha256sum }}
         checksum/oauth2-config: {{ include (print $.Template.BasePath "/app/oauth2-proxy-configmap.yaml") . | sha256sum }}
         checksum/oauth2-secret: {{ include (print $.Template.BasePath "/app/oauth2-secret.yaml") . | sha256sum }}
-        checksum/project-proxy-config: {{ include (print $.Template.BasePath "/app/project-proxy-nginx-config.yaml") . | sha256sum }}
+        checksum/project-proxy-config: {{ include (print $.Template.BasePath "/app/oauth2-proxy-nginx-config.yaml") . | sha256sum }}
         {{- if .Values.gitea.enabled }}
         checksum/gitea-oauth2-config: {{ include (print $.Template.BasePath "/gitea/gitea-oauth2-configmap.yaml") . | sha256sum }}
         checksum/gitea-admin-secret: {{ include (print $.Template.BasePath "/gitea/gitea-admin-secret.yaml") . | sha256sum }}
+        {{- end }}
+      {{- with .Values.podAnnotations }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      labels:
+        {{- include "kdl-server.kdlServerLabels" . | nindent 8 }}
+        {{- with .Values.podLabels }}
+        {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
       initContainers:
@@ -41,18 +52,96 @@ spec:
             - configMapRef:
                 name: kdl-server
         {{- end }}
+        {{- with .Values.initContainers }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
       containers:
         - name: kdl-app
-          image: {{ .Values.kdlServer.image.repository }}:{{ .Values.kdlServer.image.tag }}
-          imagePullPolicy: {{ .Values.kdlServer.image.pullPolicy }}
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          {{- with .Values.command }}
+          command: {{- toYaml . | nindent 12 }}
+          {{- end }}
+          {{- with .Values.args }}
+          args: {{- toYaml . | nindent 12 }}
+          {{- end }}
+          ports:
+            - name: http
+              containerPort: {{ .Values.service.targetPort | default .Values.service.port }}
+              protocol: TCP
+            {{- range $port := .Values.service.extraPorts }}
+            - name: {{ $port.name }}
+              containerPort: {{ $port.targetPort }}
+              protocol: TCP
+            {{- end }}
           lifecycle:
-            postStart:
-              exec:
-                command:
-                  - "/bin/sh"
-                  - "-c"
-                  - "ssh-keyscan -H gitea >> /app/.ssh/known_hosts"
+            {{- with .Values.lifecycle }}
+            {{- toYaml . | nindent 12 }}
+            {{- end }}
+          {{- if .Values.livenessProbe.enabled }}
+          livenessProbe:
+            {{- if .Values.livenessProbeCustom }}
+            {{- toYaml .Values.livenessProbeCustom | nindent 12 }}
+            {{- else }}
+            httpGet:
+              path: {{ .Values.service.healthPath | default "/" | quote }}
+              port: {{ .Values.service.targetPort | default .Values.service.port }}
+            failureThreshold: {{ .Values.livenessProbe.failureThreshold }}
+            initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
+            periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
+            successThreshold: {{ .Values.livenessProbe.successThreshold }}
+            timeoutSeconds: {{ .Values.livenessProbe.timeoutSeconds }}
+            {{- end }}
+          {{- end }}
+          {{- if .Values.readinessProbe.enabled }}
+          readinessProbe:
+            {{- if .Values.readinessProbeCustom }}
+            {{- toYaml .Values.readinessProbeCustom | nindent 12 }}
+            {{- else }}
+            httpGet:
+              path: {{ .Values.service.healthPath | default "/" | quote }}
+              port: {{ .Values.service.targetPort | default .Values.service.port }}
+            failureThreshold: {{ .Values.readinessProbe.failureThreshold }}
+            initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
+            periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
+            successThreshold: {{ .Values.readinessProbe.successThreshold }}
+            timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
+            {{- end }}
+          {{- end }}
+          {{- if .Values.startupProbe.enabled }}
+          startupProbe:
+            {{- if .Values.startupProbeCustom }}
+            {{- toYaml .Values.startupProbeCustom | nindent 12 }}
+            {{- else }}
+            httpGet:
+              path: {{ .Values.service.healthPath | default "/" | quote }}
+              port: {{ .Values.service.targetPort | default .Values.service.port }}
+            failureThreshold: {{ .Values.startupProbe.failureThreshold }}
+            initialDelaySeconds: {{ .Values.startupProbe.initialDelaySeconds }}
+            periodSeconds: {{ .Values.startupProbe.periodSeconds }}
+            successThreshold: {{ .Values.startupProbe.successThreshold }}
+            timeoutSeconds: {{ .Values.startupProbe.timeoutSeconds }}
+            {{- end }}
+          {{- end }}
+          envFrom:
+            # TODO: keep legacy backward compatibility
+            - secretRef:
+                name: kdl-server
+            - configMapRef:
+                name: kdl-server
+            {{- if .Values.gitea.enabled }}
+            - secretRef:
+                name: gitea-admin
+            - configMapRef:
+                name: gitea-oauth2
+            {{- end }}
+            {{- if .Values.envFromFiles }}
+{{ tpl (toYaml .Values.envFromFiles) . | indent 8 }}
+            {{- end }}
           env:
+            # TODO: keep legacy backward compatibility
             - name: SSH_KNOWN_HOSTS
               value: /app/.ssh/known_hosts
             - name: POD_NAMESPACE
@@ -64,21 +153,54 @@ spec:
                 secretKeyRef:
                   name: {{ .Values.global.mongodb.connectionString.secretName }}
                   key: {{ .Values.global.mongodb.connectionString.secretKey }}
-          envFrom:
-            - configMapRef:
-                name: kdl-server
-            - configMapRef:
-                name: gitea-oauth2
-            - secretRef:
-                name: gitea-admin
-            - secretRef:
-                name: kdl-server
+            # Variables from secrets have precedence
+            {{- $envList := dict }}
+            {{- if .Values.envFromSecrets }}
+            {{- range $key, $value := .Values.envFromSecrets }}
+            {{- if not (hasKey $envList $key) }}
+            - name: {{ $key | upper }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ $value.name }}
+                  key: {{ $value.key | default $key }}
+            {{- $_ := set $envList $key true }}
+            {{- end }}
+            {{- end }}
+            {{- end }}
+            # Variables from configmap have precedence
+            {{- $envList := dict }}
+            {{- if .Values.envFromConfigMap }}
+            {{- range $key, $value := .Values.envFromConfigMap }}
+            {{- if not (hasKey $envList $key) }}
+            - name: {{ $key | upper }}
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ $value.name }}
+                  key: {{ $value.key | default $key }}
+            {{- $_ := set $envList $key true }}
+            {{- end }}
+            {{- end }}
+            {{- end }}
+            # Add Variables in plain text if they were not already added from secrets
+            {{- if .Values.env }}
+            {{- range $key, $value := .Values.env }}
+            {{- if not (hasKey $envList $key) }}
+            - name: {{ $key | upper }}
+              value: {{ $value | quote }}
+            {{- $_ := set $envList $key true }}
+            {{- end }}
+            {{- end }}
+            {{- end }}
           volumeMounts:
             - name: kdl-server
               mountPath: /public/config.json
               subPath: config.json
-          ports:
-            - containerPort: 8080
+            {{- with .Values.volumeMounts }}
+              {{- toYaml . | nindent 12 }}
+            {{- end }}
+        # TODO: migrate this container to subchart `oauth2proxy` and configure
+        # it with the values with the properly `args`, `env` and `volumeMounts`
+        {{- if not .Values.oauth2proxy.enabled }}
         - name: oauth2-proxy
           image: {{ .Values.oauth2Proxy.image.repository }}:{{ .Values.oauth2Proxy.image.tag }}
           imagePullPolicy: {{ .Values.oauth2Proxy.image.pullPolicy }}
@@ -95,21 +217,18 @@ spec:
           env:
             - name: OAUTH2_PROXY_HTTP_ADDRESS
               value: "0.0.0.0:3000"
-
             - name: OAUTH2_PROXY_CLIENT_ID
               valueFrom:
                 secretKeyRef:
                   # app generated secret
                   name: kdl-server-oauth2-credentials
                   key: OAUTH2_CLIENT_ID
-
             - name: OAUTH2_PROXY_CLIENT_SECRET
               valueFrom:
                 secretKeyRef:
                   # app generated secret
                   name: kdl-server-oauth2-credentials
                   key: OAUTH2_CLIENT_SECRET
-
           volumeMounts:
             - name: oauth2-config
               mountPath: /etc/oauth2_proxy.cfg
@@ -122,23 +241,20 @@ spec:
           image: nginx:alpine
           ports:
             - containerPort: 9000
+        {{- end }}
           volumeMounts:
+          {{- if not .Values.oauth2proxy.enabled }}
             - name: project-proxy-nginx-config
               mountPath: /etc/nginx/nginx.conf
               subPath: nginx.conf
-    {{- with .Values.kdlServer.nodeSelector }}
-      nodeSelector:
-{{ toYaml . | indent 8 }}
-    {{- end }}
-    {{- with .Values.kdlServer.affinity }}
-      affinity:
-{{ toYaml . | indent 8 }}
-    {{- end }}
-    {{- with .Values.kdlServer.tolerations }}
-      tolerations:
-{{ toYaml . | indent 8 }}
-    {{- end }}
+          {{- end }}
+          {{- with .Values.volumeMounts }}
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+      terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds }}
       volumes:
+        # TODO: legacy backward compatibility
+        {{- if not .Values.oauth2proxy.enabled }}
         - name: oauth2-config
           configMap:
             name: kdl-server-oauth2-proxy
@@ -148,3 +264,24 @@ spec:
         - name: project-proxy-nginx-config
           configMap:
             name: project-proxy-nginx-config
+        {{- end }}
+        {{- with .Values.volumes }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.topologySpreadConstraints }}
+      {{- $_ := include "kdl-server.patchTopologySpreadConstraints" $ }}
+      topologySpreadConstraints:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
