--- a/charts/kdl-server/templates/app/oauth2-proxy-configmap.yaml
+++ b/charts/kdl-server/templates/app/oauth2-proxy-configmap.yaml
@@ -1,3 +1,5 @@
+# TODO: legacy backward compatibility
+{{- if not .Values.oauth2proxy.enabled -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -19,3 +21,4 @@ data:
     ssl_insecure_skip_verify=true
     ssl_upstream_insecure_skip_verify=true
     {{- end }}
+{{- end }}
