--- a/charts/kdl-server/templates/app/oauth2-proxy-nginx-config.yaml
+++ b/charts/kdl-server/templates/app/oauth2-proxy-nginx-config.yaml
@@ -1,3 +1,5 @@
+# TODO: legacy backward compatibility
+{{- if not .Values.oauth2proxy.enabled -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -62,3 +64,4 @@ data:
         }
       }
     }
+{{- end }}
