--- a/charts/kdl-server/templates/app/service.yaml
+++ b/charts/kdl-server/templates/app/service.yaml
@@ -1,15 +1,24 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kdl-server
+  name: {{ include "kdl-server.fullname" . }}
   labels:
-    app: kdl-server
+    {{- include "kdl-server.kdlServerLabels" . | nindent 4 }}
 spec:
-  clusterIP: None
+  type: {{ .Values.service.type }}
   ports:
-    - port: 80
-      targetPort: 3000
+    - port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.targetPort | default .Values.service.port }}
       protocol: TCP
-      name: oauth2-proxy
+      name: http
+      {{- if and (eq "NodePort" .Values.service.type) .Values.service.nodePort }}
+      nodePort: {{ .Values.service.nodePort }}
+      {{- end }}
+    {{- range $port := .Values.service.extraPorts }}
+    - name: {{ $port.name }}
+      port: {{ $port.port }}
+      targetPort: {{ $port.targetPort }}
+      protocol: TCP
+    {{- end }}
   selector:
-    app: kdl-server
+    {{- include "kdl-server.selectorKdlServerLabels" . | nindent 4 }}
