--- a/charts/kdl-server/templates/knowledge-galaxy/configmap.yaml
+++ b/charts/kdl-server/templates/knowledge-galaxy/configmap.yaml
@@ -2,26 +2,18 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: knowledge-galaxy
+  name: {{ include "kdl-server.fullname" . }}-knowledge-galaxy
+  annotations:
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-weight": "0"
   labels:
-    app:  knowledge-galaxy
+    {{- include "kdl-server.knowledgeGalaxyLabels" . | nindent 4 }}
 data:
-  WORKERS: "{{ .Values.knowledgeGalaxy.config.workers }}"
-  HOST: "0.0.0.0"
-  SERVER_PORT: "8080"
-  # Recommender Settings
-  N_HITS: "{{ .Values.knowledgeGalaxy.config.numberOfOutputs }}"
-  DESCRIPTION_MIN_WORDS: "{{ .Values.knowledgeGalaxy.config.descriptionMinWords }}"
-  # Log file
-  LOG_LEVEL: "{{ .Values.knowledgeGalaxy.config.logLevel }}"
-  STANDALONE_MODE: "false"
-  # UI Config file
-  config.json: |+
+  config.json: |-
     {
       "SERVER_NAME": "{{ .Values.global.serverName }}",
       "SERVER_URL": "{{ include "http.protocol" . }}://kdlapp.{{ .Values.global.domain }}/kg",
       "MODE": "iframe",
-      "BASENAME": "/kg/",
-      "DESCRIPTION_MIN_WORDS": {{ default "50" .Values.knowledgeGalaxy.config.descriptionMinWords }}
+      "BASENAME": "/kg/"
     }
-{{ end }}
+{{- end }}
